ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_open_curly_one_field.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"S a: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier(a), expected one of (16) `;`, `.`, `{`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1807,
                ),
            },
        ],
    },
)
