ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_second_field_name.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, : a, c: a };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of (2) identifier, `}`",
                span: 1:11; [10, 11],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1759,
                ),
            },
        ],
    },
)
