ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_second_field_value.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (10) identifier, number, string, `true`, `false`, `if`, `while`, `(`, `-`, `[`",
                span: 1:14; [13, 14],
                level: Error,
            },
        ],
        inputs: (),
    },
)
