ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_semicolon.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (12) `;` 1601, `.` 1040, `*` 1209, `/` 1207, `-` 1203, `+` 1205, `==` 1191, `!=` 1193, `>` 1195, `>=` 1197, `<` 1199, `<=` 1201",
                span: 1:11; [10, 10],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1601,
                ),
            },
        ],
    },
)
