ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_third_field_value.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"S { a: a, b: a, c: };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (9) identifier, number, `true`, `false`, `if`, `while`, `(`, `-`, `[`",
                span: 1:20; [19, 20],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    994,
                ),
            },
        ],
    },
)
