ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_close_curly_one_field_trailing_comma.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number,\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (2) identifier 763, `}` 762",
                span: 1:22; [21, 21],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    758,
                ),
            },
        ],
    },
)
